--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "9.1",
+    "dat.gui": "^0.7.9",
     "react": "19.0",
     "react-dom": "19.0",
     "three": "^0.174.0"
